fix link wrapping

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -362,4 +362,14 @@ dwf-header {
   }
 }
 
+.rada .govuk-summary-card__actions {
+   flex-wrap:nowrap;
+  height:28px;
+
+  }
+
+.rada .govuk-summary-card__action {
+  text-wrap:nowrap;
+}
+
 
